[package]
name = "bench-alloc"
version = "0.1.0"
authors = ["Wodann <wodannson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-wg = { git = "https://github.com/TimDiekmann/alloc-wg", branch="call-by-value" }
bumpalo = { git = "https://github.com/Wodann/bumpalo", branch = "feature/alloc-wg" }
rand = "0.7"
